[package]
name = "command_parser"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[test]]
name="compile-tests"
path="tests/compile.rs"

[[test]]
name="tests"
path="tests/test.rs"

[dev-dependencies]
trybuild = "1.0.43"

[dependencies]
parse_macro = {path="parse_macro"}